tests/ui/traits/const-traits/mutually-exclusive-trait-bound-modifiers.stderr
error: `~const` trait not allowed with `?` trait polarity modifier
  --> $DIR/mutually-exclusive-trait-bound-modifiers.rs:4:38
   |
LL | const fn maybe_const_maybe<T: ~const ?Sized>() {}
   |                               ------ ^
   |                               |
   |                               there is not a well-defined meaning for a `~const ?` trait

error: `const` trait not allowed with `?` trait polarity modifier
  --> $DIR/mutually-exclusive-trait-bound-modifiers.rs:7:25
   |
LL | fn const_maybe<T: const ?Sized>() {}
   |                   ----- ^
   |                   |
   |                   there is not a well-defined meaning for a `const ?` trait

error: `~const` trait not allowed with `!` trait polarity modifier
  --> $DIR/mutually-exclusive-trait-bound-modifiers.rs:10:41
   |
LL | const fn maybe_const_negative<T: ~const !Trait>() {}
   |                                  ------ ^
   |                                  |
   |                                  there is not a well-defined meaning for a `~const !` trait

error: `const` trait not allowed with `!` trait polarity modifier
  --> $DIR/mutually-exclusive-trait-bound-modifiers.rs:14:28
   |
LL | fn const_negative<T: const !Trait>() {}
   |                      ----- ^
   |                      |
   |                      there is not a well-defined meaning for a `const !` trait

error: negative bounds are not supported
  --> $DIR/mutually-exclusive-trait-bound-modifiers.rs:10:41
   |
LL | const fn maybe_const_negative<T: ~const !Trait>() {}
   |                                         ^

error: negative bounds are not supported
  --> $DIR/mutually-exclusive-trait-bound-modifiers.rs:14:28
   |
LL | fn const_negative<T: const !Trait>() {}
   |                            ^

error: aborting due to 6 previous errors

